# Albany

./: .gitignore  CMakeLists.txt
src/: Albany_Application.cpp  Albany_Application.hpp  CMakeLists.txt  Main_SolveT.cpp  PHAL_Workset.hpp
src/AMP/evaluators/: EnergyDot.hpp
src/AMP/problems/: AMPThermoMechanics.hpp  PhaseProblem.hpp
src/ANISO/: AdvectionProblem.hpp
src/ATO/problems/: LinearElasticityModalProblem.hpp  LinearElasticityProblem.hpp  PoissonsEquation.hpp
src/Aeras/problems/: Aeras_HydrostaticProblem.hpp  Aeras_ShallowWaterProblem.hpp  Aeras_ShallowWaterProblemNoAD.hpp  Aeras_XScalarAdvectionProblem.hpp  Aeras_XZHydrostaticProblem.hpp  Aeras_XZScalarAdvectionProblem.hpp  Aeras_XZScalarAdvectionProblemOld.hpp
src/CTM/: CTM_MechanicsProblem.hpp  CTM_ThermalProblem.hpp
src/FELIX/: CMakeLists.txt
src/FELIX/evaluators/: FELIX_EffectivePressure_Def.hpp  FELIX_HydrologyResidualCavitiesEqn.hpp  FELIX_HydrologyResidualCavitiesEqn_Def.hpp  FELIX_HydrologyResidualMassEqn.cpp  FELIX_HydrologyResidualMassEqn.hpp  FELIX_HydrologyResidualMassEqn_Def.hpp  FELIX_HydrologyWaterDischarge_Def.hpp  FELIX_SimpleOperation.hpp
src/FELIX/problems/: FELIX_Enthalpy.hpp  FELIX_Hydrology.cpp  FELIX_Hydrology.hpp  FELIX_LaplacianSampling.hpp  FELIX_PopulateMesh.hpp  FELIX_SchoofFit.hpp  FELIX_Stokes.hpp  FELIX_StokesFO.hpp  FELIX_StokesFOHydrology.hpp  FELIX_StokesFOThermoCoupled.hpp  FELIX_StokesFOThickness.hpp  FELIX_StokesL1L2.hpp
src/Hydride/problems/: HydMorphProblem.hpp  HydrideProblem.hpp  LaplaceBeltramiProblem.hpp  MesoScaleLinkProblem.hpp
src/LCM/: CMakeLists.txt
src/LCM/problems/: ConstitutiveDriverProblem.hpp  ElasticityProblem.hpp  ElectroMechanicsProblem.hpp  HMCProblem.hpp  MechanicsProblem.hpp  MechanicsProblem_Def.hpp  PeridigmProblem.hpp  ThermoElasticityProblem.hpp
src/WAFERLG/: CMakeLists.txt
src/WAFERLG/evaluators/: Energy_Dot.cpp  Energy_Dot.hpp  Energy_Dot_Def.hpp  Laser.cpp  Laser.hpp  Laser_Source.cpp  Laser_Source.hpp  Laser_Source_Def.hpp  LocalPorosity.cpp  LocalPorosity.hpp  LocalPorosity_Def.hpp  Phase_Residual.cpp  Phase_Residual.hpp  Phase_Residual_Def.hpp  Phase_Source.cpp  Phase_Source.hpp  Phase_Source_Def.hpp  Phi1.cpp  Phi1.hpp  Phi1_Def.hpp  Phi2.cpp  Phi2.hpp  Phi2_Def.hpp  Psi1.cpp  Psi1.hpp  Psi1_Def.hpp  Psi2.cpp  Psi2.hpp  Psi2_Def.hpp  ThCond.cpp  ThCond.hpp  ThCond_Def.hpp  WAFERLG_Time.cpp  WAFERLG_Time.hpp  WAFERLG_Time_Def.hpp  rho_Cp.cpp  rho_Cp.hpp  rho_Cp_Def.hpp
src/WAFERLG/problems/: WAFERLGThermoMechanics.cpp  WAFERLGThermoMechanics.hpp
src/adapt/: AAdapt_AdaptiveSolutionManagerT.cpp  CMakeLists.txt
src/disc/: Albany_AbstractMeshStruct.hpp  Albany_DiscretizationFactory.cpp  Albany_DiscretizationFactory.hpp
src/problems/: AbstractProblem.cpp  AbstractProblem.hpp  Albany_AbstractProblem.hpp  Albany_AdvDiffProblem.hpp  Albany_CahnHillProblem.hpp  Albany_ComprNSProblem.hpp  Albany_HeatProblem.hpp  Albany_Helmholtz2DProblem.hpp  Albany_LinComprNSProblem.hpp  Albany_NavierStokes.hpp  Albany_ODEProblem.hpp  Albany_PNPProblem.hpp  Albany_ProblemFactory.cpp  Albany_ReactDiffSystem.hpp  Albany_SideLaplacianProblem.hpp  Albany_ThermoConductProblem.cpp  Albany_ThermoConductProblem.hpp  Albany_ThermoElectrostaticsProblem.hpp
tests/small/: CMakeLists.txt
(+48 files in other folders)
